# libbuf

./: LICENSE  Makefile.am  README  configure.in  libbuf.pc.in
src/: Makefile.am  buf.c  libbuf.h
tests/: Makefile.am  main.c
