#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(libbuf, 1.0.0)
AC_CONFIG_SRCDIR([src/buf.c])
AM_INIT_AUTOMAKE([foreign no-dist no-installinfo no-installman -Wall])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h stdlib.h stddef.h stdint.h string.h errno.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_REALLOC
AC_CHECK_FUNCS([ \
    malloc \
    realloc \
    free \
    memmove \
    memcpy \
    strtoll \
])

AC_CONFIG_FILES([Makefile
				src/Makefile])
AC_OUTPUT
